--- a/.github/workflows/thing.yml
+++ b/.github/workflows/thing.yml
@@ -9,5 +9,6 @@ jobs:
     - uses: actions/checkout@v2 # Adds a step to checkout the repository code
     - name: Dotnet build
       run: dotnet build
-
+    - name: Dotnet test
+      run: dotnet test
     
