--- a/.github/workflows/thing.yml
+++ b/.github/workflows/thing.yml
@@ -11,4 +11,6 @@ jobs:
       run: dotnet build
     - name: Dotnet test
       run: dotnet test
-    
+    - name: npm t
+      working-directory: DotnetTemplate.web
+      run: npm t
